--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,9 @@
 steps:
+- name: 'ubuntu'
+  args: ['mkdir', '-p', '/workspace/.gradle']
 - name: gcr.io/cloud-builders/gsutil
   args: ['rsync', '-d', '-r', '/workspace/.gradle', 'gs://gradle_cache/.gradle']
 - name: 'gcr.io/sixth-starlight-858/android-builder'
   args: ['./gradlew', '-g', '/workspace/.gradle', 'assemble']
 - name: gcr.io/cloud-builders/gsutil
   args: ['rsync', '-d', '-r', 'gs://gradle_cache/.gradle', '/workspace/.gradle']
-options:
-  machineType: 'N1_HIGHCPU_8'
