--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,11 @@
 steps:
+- name: gcr.io/cloud-builders/gsutil
+  args: ['cp', 'gs://gradle_cache/cache.zip', 'cache.zip']
 - name: 'ubuntu'
-  args: ['mkdir', '-p', '/workspace/.gradle']
-- name: gcr.io/cloud-builders/gsutil
-  args: ['rsync', '-d', '-r', 'gs://gradle_cache/', '/workspace/.gradle']
+  args: ['unzip', 'cache.zip']
 - name: 'gcr.io/sixth-starlight-858/android-builder'
-  args: ['./gradlew', '-g', '/workspace/.gradle', 'assemble']
+  args: ['./gradlew', '-g', '.gradle', 'assemble']
+- name: 'ubuntu'
+  args: ['zip', '-r', 'cache.zip', '.gradle']
 - name: gcr.io/cloud-builders/gsutil
-  args: ['rsync', '-d', '-r', '/workspace/.gradle', 'gs://gradle_cache/']
+  args: ['cp', 'cache.zip', 'gs://gradle_cache/cache.zip']
